--- a/index.html
+++ b/index.html
@@ -259,19 +259,17 @@
 <title>نموذج تسجيل الطلاب - جامعة الملك فيصل</title>
 <style>
 :root{
-  --green-royal: #0b6b44;
-  --green-dark: #08583a;
-  --muted: #6b6b6b;
-  --card-bg: #ffffff;
-  --danger: #c33;
-  --success: #2a9d63;
-  --max-width: 1200px;
+  --green-royal:#0b6b44;
+  --green-dark:#08583a;
+  --muted:#6b6b6b;
+  --card-bg:#fff;
+  --danger:#c33;
+  --success:#2a9d63;
+  --max-width:1200px;
 }
 *{box-sizing:border-box;font-family: "Segoe UI", Tahoma, Arial, "Helvetica Neue", sans-serif}
-body{margin:0;background:linear-gradient(180deg,#f6fbf7 0%,#ffffff 100%);color:#0a0a0a;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
-.container{max-width: var(--max-width);margin:24px auto;padding:18px;}
-#openFormBtn{background:var(--green-royal);color:#fff;border:none;padding:12px 18px;border-radius:10px;font-weight:600;cursor:pointer;box-shadow:0 6px 18px rgba(11,107,68,0.18);}
-#openFormBtn:active{transform:translateY(1px);}
+body{margin:0;background:linear-gradient(180deg,#f6fbf7 0%,#fff 100%);color:#0a0a0a;}
+.container{max-width:var(--max-width);margin:24px auto;padding:18px;}
 .form-wrap{margin-top:18px;background:var(--card-bg);border-radius:12px;box-shadow:0 8px 30px rgba(10,10,10,0.06);overflow:hidden;display:none;min-height:520px;}
 .form-grid{display:grid;grid-template-columns:1fr 420px;gap:0;min-height:520px;}
 .col-right{padding:28px 34px;}
@@ -287,9 +285,9 @@ input[type="file"]{font-size:13px;}
 textarea{width:100%;min-height:80px;padding:10px 12px;border-radius:8px;border:1px solid #eaeaea;resize:vertical;}
 .field{width:100%;}
 .col-left{background: linear-gradient(180deg, rgba(11,107,68,0.05), rgba(11,107,68,0.02));padding:24px;border-left:1px solid #f0f0f0;}
-.card{background: #fff;padding:14px;border-radius:10px;box-shadow:0 6px 18px rgba(11,107,68,0.04);margin-bottom:14px;}
+.card{background:#fff;padding:14px;border-radius:10px;box-shadow:0 6px 18px rgba(11,107,68,0.04);margin-bottom:14px;}
 .preview-grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;}
-.preview-img{width:100%;height:120px;border-radius:8px;background:#f7f7f7;display:flex;align-items:center;justify-content:center;font-size:12px;color:#9b9b9b;overflow:hidden;}
+.preview-img{width:100%;height:120px;border-radius:8px;background:#f7f7f7;display:flex;align-items:center;justify-content:center;font-size:12px;color:#9b9b9b;overflow:hidden;text-align:center;line-height:1.2;}
 .small{font-size:12px;color:var(--muted);}
 .btn{display:inline-block;padding:10px 14px;border-radius:10px;border:none;cursor:pointer;font-weight:700;}
 .btn-primary{background:var(--green-royal);color:#fff;box-shadow:0 8px 20px rgba(11,107,68,0.12);}
@@ -304,99 +302,192 @@ textarea{width:100%;min-height:80px;padding:10px 12px;border-radius:8px;border:1
 </head>
 <body>
 <div class="container">
-<button id="openFormBtn">طالب جديد</button>
+
+<!-- زر الطالب الجديد الموجود عندك -->
+<button id="openFormBtn" class="btn btn-primary">طالب جديد</button>
+
+<!-- النموذج مخفي ويظهر عند الضغط على الزر -->
 <div id="registrationForm" class="form-wrap" aria-hidden="true" role="region" aria-label="نموذج تسجيل الطلاب">
 <div class="form-grid">
 <div class="col-right">
 <h2 class="title">نموذج تسجيل الطلاب - جامعة الملك فيصل</h2>
 <p class="subtitle">املئي البيانات المطلوبة بدقة. الحقول الموسومة بـ * مطلوبة.</p>
-<!-- بيانات شخصية -->
+
+<!-- البيانات الشخصية -->
 <div class="section"><h4>البيانات الشخصية</h4>
 <div class="row col-2">
-<div class="field"><label>الاسم الكامل (رباعي) *</label><input id="fullName" type="text" placeholder="مثال: محمد بن علي بن خالد" required><div class="error" id="err_fullName">يجب إدخال الاسم الرباعي.</div></div>
-<div class="field"><label>نوع الجنس *</label><select id="gender" required><option value="">اختر...</option><option>ذكر</option><option>أنثى</option></select><div class="error" id="err_gender">اختر النوع.</div></div></div>
-<div class="row col-2"><div class="field"><label>الجنسية *</label><select id="nationality" required><option value="">اختر الجنسية...</option><option value="SA">سعودي / سعودية</option><option value="IN">هندي</option><option value="EG">مصري</option><option value="PK">باكستاني</option><option value="SY">سوري</option><option value="OTHER">دولية أخرى</option></select><div class="error" id="err_nationality">اختر الجنسية.</div></div>
-<div class="field"><label>رقم الهوية / رقم الإقامة *</label><input id="idNumber" type="text" placeholder="أدخل رقم الهوية أو رقم الإقامة" required><div class="error" id="err_idNumber">أدخل رقم الهوية أو رقم الإقامة.</div></div></div>
-<div class="row col-2"><div class="field"><label>تاريخ الميلاد (ميلادي)</label><input id="dob" type="date"></div><div class="field"><label>الحالة الاجتماعية</label><select id="marital"><option>أعزب/عزباء</option><option>متزوج/متزوجة</option><option>مطلق/مطلقة</option><option>أرمل/أرملة</option></select></div></div>
-<div class="row col-2"><div class="field" id="passportField" style="display:none;"><label>رقم الجواز</label><input id="passportNumber" type="text" placeholder="لغير السعوديين"></div><div class="field" id="iqamaExpiryField" style="display:none;"><label>تاريخ انتهاء الإقامة</label><input id="iqamaExpiry" type="date"></div></div>
+<div class="field"><label>الاسم الكامل (رباعي) *</label><input id="fullName" type="text"><div class="error" id="err_fullName">يجب إدخال الاسم الرباعي.</div></div>
+<div class="field"><label>الجنس *</label><select id="gender"><option value="">اختر...</option><option>ذكر</option><option>أنثى</option></select><div class="error" id="err_gender">اختر النوع.</div></div>
 </div>
+<div class="row col-2">
+<div class="field"><label>الجنسية *</label><select id="nationality"><option value="">اختر...</option><option value="SA">سعودي / سعودية</option><option value="IN">هندي</option><option value="EG">مصري</option><option value="PK">باكستاني</option><option value="SY">سوري</option><option value="OTHER">أخرى</option></select><div class="error" id="err_nationality">اختر الجنسية.</div></div>
+<div class="field"><label>رقم الهوية / الإقامة *</label><input id="idNumber" type="text"><div class="error" id="err_idNumber">أدخل رقم الهوية أو الإقامة.</div></div>
+</div>
+</div>
+
 <!-- بيانات التواصل -->
 <div class="section"><h4>بيانات التواصل</h4>
-<div class="row col-2"><div class="field"><label>رقم الجوال *</label><input id="phone" type="text" placeholder="05xxxxxxxx" required><div class="error" id="err_phone">أدخل رقم جوال صالح.</div></div>
-<div class="field"><label>البريد الإلكتروني *</label><input id="email" type="email" placeholder="example@mail.com" required><div class="error" id="err_email">أدخل بريدًا إلكترونيًا صالحًا.</div></div></div>
-<div class="row"><div class="field"><label>المدينة</label><input id="city" type="text" placeholder="المدينة"></div></div>
-<div class="row"><div class="field"><label>العنوان بالتفصيل</label><textarea id="address" placeholder="العنوان بالتفصيل"></textarea></div></div>
+<div class="row col-2">
+<div class="field"><label>رقم الجوال *</label><input id="phone" type="text"><div class="error" id="err_phone">أدخل رقم جوال صالح.</div></div>
+<div class="field"><label>البريد الإلكتروني *</label><input id="email" type="email"><div class="error" id="err_email">أدخل بريد إلكتروني صالح.</div></div>
 </div>
+<div class="row"><div class="field"><label>المدينة</label><input id="city" type="text"></div></div>
+<div class="row"><div class="field"><label>العنوان بالتفصيل</label><textarea id="address"></textarea></div></div>
+</div>
+
 <!-- البيانات الأكاديمية -->
 <div class="section"><h4>البيانات الأكاديمية</h4>
-<div class="row col-2"><div class="field"><label>نوع المؤهل السابق *</label><select id="prevDegree" required><option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option></select><div class="error" id="err_prevDegree">اختر نوع المؤهل.</div></div>
-<div class="field"><label>سنة التخرج *</label><input id="gradYear" type="number" placeholder="مثال: 2022" min="1900" max="2100" required><div class="error" id="err_gradYear">أدخل سنة تخرج صحيحة.</div></div></div>
+<div class="row col-2">
+<div class="field"><label>نوع المؤهل السابق *</label><select id="prevDegree"><option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option></select><div class="error" id="err_prevDegree">اختر نوع المؤهل.</div></div>
+<div class="field"><label>سنة التخرج *</label><input id="gradYear" type="number" min="1900" max="2100"><div class="error" id="err_gradYear">أدخل سنة التخرج الصحيحة.</div></div>
+</div>
 <div class="row"><div class="field"><label>اسم المدرسة / الجامعة السابقة</label><input id="prevInstitute" type="text"></div></div>
-<div class="row col-2"><div class="field"><label>النسبة / المعدل</label><input id="gpa" type="text" placeholder="مثال: 95%"></div>
-<div class="field"><label>التخصص المطلوب *</label><input id="desiredMajor" type="text" required><div class="error" id="err_desiredMajor">أدخل التخصص المطلوب.</div></div></div>
+<div class="row col-2">
+<div class="field"><label>النسبة / المعدل</label><input id="gpa" type="text"></div>
+<div class="field"><label>التخصص المطلوب *</label><input id="desiredMajor" type="text"><div class="error" id="err_desiredMajor">أدخل التخصص المطلوب.</div></div>
+</div>
 <div class="row"><div class="field"><label>نوع الدراسة</label><select id="studyType"><option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option></select></div></div>
 </div>
-<!-- بيانات ولي الأمر -->
-<div class="section"><h4>بيانات ولي الأمر</h4>
-<div class="row col-2"><div class="field"><label>اسم ولي الأمر</label><input id="guardianName" type="text"></div>
-<div class="field"><label>رقم هوية/إقامة ولي الأمر</label><input id="guardianId" type="text"></div></div>
-<div class="row"><div class="field"><label>صلة القرابة</label><input id="guardianRelation" type="text" placeholder="مثال: والد/والدة"></div></div>
-<div class="row"><div class="field"><label>رقم جوال ولي الأمر</label><input id="guardianPhone" type="text"></div></div></div>
-<!-- رفع الملفات -->
-<div class="section"><h4>رفع الملفات (مع معاينة)</h4>
-<div class="row col-2"><div class="field"><label>صورة الهوية / الإقامة *</label><input id="fileId" type="file" accept="image/*,application/pdf" required><div class="error" id="err_fileId">يرجى رفع صورة الهوية أو الإقامة.</div></div>
-<div class="field"><label>صورة الشهادة *</label><input id="fileCertificate" type="file" accept="image/*,application/pdf" required><div class="error" id="err_fileCertificate">يرجى رفع صورة الشهادة.</div></div></div>
-<div class="row col-2"><div class="field"><label>صورة شخصية *</label><input id="filePhoto" type="file" accept="image/*" required><div class="error" id="err_filePhoto">يرجى رفع صورة شخصية.</div></div>
-<div class="field"><label>إيصال الدفع</label><input id="fileReceipt" type="file" accept="image/*,application/pdf"></div></div></div>
-<!-- الإقرار -->
-<div class="section"><div class="row"><label style="display:flex; align-items:center; gap:8px;"><input id="agree" type="checkbox" style="transform:scale(1.1);"> <span>أقر بأن جميع البيانات المدخلة صحيحة وأتحمل مسؤولية أي معلومات غير صحيحة. *</span></label><div class="error" id="err_agree">يجب الموافقة على الإقرار.</div></div></div>
-<!-- أزرار -->
-<div class="section" style="display:flex; gap:12px; align-items:center; justify-content:flex-start;">
-<button id="submitBtn" class="btn btn-primary">إرسال التسجيل</button>
-<button id="cancelBtn" class="btn btn-light">إلغاء</button>
-<div class="note">بعد الضغط تظهر رسالة نجاح رسمية (محاكاة)، لا يتم إرسال البيانات فعليًا.</div>
+
+<!-- رفع الملفات والدفع -->
+<div class="section"><h4>رفع الملفات والدفع</h4>
+<div class="row col-2">
+<div class="field"><label>صورة الهوية / الإقامة *</label><input id="fileId" type="file" accept="image/*,application/pdf"><div class="error" id="err_fileId">يرجى رفع صورة الهوية أو الإقامة.</div></div>
+<div class="field"><label>صورة الشهادة *</label><input id="fileCertificate" type="file" accept="image/*,application/pdf"><div class="error" id="err_fileCertificate">يرجى رفع صورة الشهادة.</div></div>
 </div>
-</div>
-<!-- العمود الأيسر -->
-<div class="col-left">
-<div class="card"><h4 style="margin:0 0 6px 0;">معاينة الملفات</h4>
-<div class="preview-grid" id="previewGrid">
-<div class="preview-img" id="previewId">هوية/إقامة<br><span class="small">لم يتم تحميل</span></div>
-<div class="preview-img" id="previewCert">شهادة<br><span class="small">لم يتم تحميل</span></div>
-<div class="preview-img" id="previewPhoto">صورة شخصية<br><span class="small">لم يتم تحميل</span></div>
-<div class="preview-img" id="previewReceipt">إيصال دفع<br><span class="small">لم يتم تحميل</span></div>
-</div></div>
-<div class="card"><h4 style="margin:0 0 6px 0;">تفاصيل الدفع البنكي</h4>
-<p class="small">بعد التحويل، يُرجى رفع إيصال الدفع في الحقل أدناه للتأكيد.</p>
-<div style="margin-top:8px;">
-<label>اسم البنك</label>
-<input id="bankName" type="text" value="البنك الأهلي" readonly>
-</div>
-<div style="margin-top:8px;">
-<label>رقم الحساب البنكي</label>
-<input id="bankAccount" type="text" value="SA1980000857608010276380" readonly>
+<div class="row col-2">
+<div class="field"><label>صورة شخصية *</label><input id="filePhoto" type="file" accept="image/*"><div class="error" id="err_filePhoto">يرجى رفع صورة شخصية.</div></div>
+<div class="field"><label>إيصال الدفع</label><input id="fileReceipt" type="file" accept="image/*,application/pdf"></div>
 </div>
 <div style="margin-top:12px; display:flex; gap:8px;">
 <button id="copyAccountBtn" class="btn btn-light">نسخ رقم الحساب</button>
 <label for="fileReceipt" class="btn btn-primary" style="margin:0;cursor:pointer;">رفع إيصال الدفع</label>
 </div>
-<div id="payInstructions" style="display:none; margin-top:10px;" class="small">بعد التحويل، ارفقي إيصال الدفع في خانة "إيصال الدفع" أعلاه. تأكدي من تطابق اسم المحول مع بيانات الطالب.</div>
 </div>
-<div class="card"><h4 style="margin:0 0 6px 0;">ملخص سريع</h4>
-<p class="small" id="summaryText">لم يتم إدخال بيانات بعد.</p></div>
+
+<!-- الإقرار -->
+<div class="section">
+<label style="display:flex; align-items:center; gap:8px;">
+  <input id="agree" type="checkbox"> 
+  <span>أقر بأن جميع البيانات المدخلة صحيحة وأتحمل مسؤولية أي معلومات غير صحيحة. *</span>
+</label>
+<div class="error" id="err_agree">يجب الموافقة على الإقرار.</div>
+</div>
+
+<!-- أزرار -->
+<div class="section" style="display:flex; gap:12px; align-items:center; justify-content:flex-start;">
+<button id="submitBtn" class="btn btn-primary">إرسال التسجيل</button>
+<button id="cancelBtn" class="btn btn-light">إلغاء</button>
+</div>
+
+</div>
+<div class="col-left">
+<div class="card"><h4>معاينة الملفات</h4>
+<div class="preview-grid">
+<div class="preview-img" id="previewId">هوية/إقامة</div>
+<div class="preview-img" id="previewCert">شهادة</div>
+<div class="preview-img" id="previewPhoto">صورة شخصية</div>
+<div class="preview-img" id="previewReceipt">إيصال دفع</div>
+</div></div>
+<div class="card"><h4>تفاصيل الدفع البنكي</h4>
+<p class="small">البنك: الأهلي السعودي</p>
+<p class="small">رقم الحساب: SA1980000857608010276380</p>
 </div>
 </div>
 </div>
-<div id="successModal" class="success-modal" role="dialog" aria-modal="true" aria-labelledby="succTitle">
-<h3 id="succTitle">تم استلام الطلب بنجاح</h3>
+</div>
+
+<!-- رسالة النجاح -->
+<div id="successModal" class="success-modal">
+<h3>تم استلام الطلب بنجاح</h3>
 <p>شكرًا لك! تم استلام بياناتك بنجاح. سيتم مراجعتها قريبا.</p>
 <button id="closeSuccess" class="btn btn-primary">حسناً</button>
 </div>
-</div>
+
 <script>
-const openFormBtn=document.getElementById('openFormBtn');
+// ربط النموذج بالزر الموجود عندك
+const openFormBtn=document.querySelector('#openFormBtn');
 const formWrap=document.getElementById('registrationForm');
-const
+openFormBtn.addEventListener('click',()=>{formWrap.style.display='block';});
+
+// معاينة الملفات
+function previewFile(input, previewId){
+  const preview=document.getElementById(previewId);
+  if(input.files && input.files[0]){
+    const file=input.files[0];
+    if(file.type.startsWith('image/')){
+      const reader=new FileReader();
+      reader.onload=function(e){preview.innerHTML='<img src="'+e.target.result+'" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">';};
+      reader.readAsDataURL(file);
+    } else {
+      preview.innerHTML=file.name;
+    }
+  }
+}
+document.getElementById('fileId').addEventListener('change',e=>previewFile(e.target,'previewId'));
+document.getElementById('fileCertificate').addEventListener('change',e=>previewFile(e.target,'previewCert'));
+document.getElementById('filePhoto').addEventListener('change',e=>previewFile(e.target,'previewPhoto'));
+document.getElementById('fileReceipt').addEventListener('change',e=>previewFile(e.target,'previewReceipt'));
+
+// نسخ رقم الحساب
+document.getElementById('copyAccountBtn').addEventListener('click',()=>{
+  const account='SA1980000857608010276380';
+  navigator.clipboard.writeText(account).then(()=>{alert('تم نسخ رقم الحساب بنجاح!');});
+});
+
+// تحقق من الحقول المطلوبة قبل الإرسال
+function validateForm(){
+  let valid=true;
+  const requiredFields=[
+    {id:'fullName'},{id:'gender'},{id:'nationality'},{id:'idNumber'},
+    {id:'phone'},{id:'email'},{id:'prevDegree'},{id:'gradYear'},{id:'desiredMajor'}
+  ];
+  requiredFields.forEach(f=>{
+    const el=document.getElementById(f.id);
+    const err=document.getElementById('err_'+f.id);
+    if(!el.value || el.value.trim()===''){if(err){err.style.display='block';} valid=false;}
+    else{if(err){err.style.display='none';}}
+  });
+  // الإقرار
+  const agree=document.getElementById('agree');
+  const errAgree=document.getElementById('err_agree');
+  if(!agree.checked){if(errAgree){errAgree.style.display='block';} valid=false;}
+  else{if(errAgree){errAgree.style.display='none';}}
+  // الملفات المطلوبة
+  const fileRequired=['fileId','fileCertificate','filePhoto'];
+  fileRequired.forEach(id=>{
+    const el=document.getElementById(id);
+    const err=document.getElementById('err_'+id);
+    if(!el.files || el.files.length===0){if(err){err.style.display='block';} valid=false;}
+    else{if(err){err.style.display='none';}}
+  });
+  return valid;
+}
+
+// إرسال النموذج
+document.getElementById('submitBtn').addEventListener('click',(e)=>{
+  e.preventDefault();
+  if(validateForm()){
+    document.getElementById('successModal').style.display='block';
+  }else{
+    alert('يرجى تعبئة جميع الحقول المطلوبة قبل الإرسال.');
+  }
+});
+
+// إغلاق رسالة النجاح
+document.getElementById('closeSuccess').addEventListener('click',()=>{
+  document.getElementById('successModal').style.display='none';
+  formWrap.style.display='none';
+});
+
+// زر الإلغاء
+document.getElementById('cancelBtn').addEventListener('click',()=>{
+  formWrap.style.display='none';
+});
+</script>
+
+</body>
+</html>
 </body>
 </html>
 
